--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky install"
@@ -28,6 +29,8 @@
     "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.1",
     "lint-staged": "^12.4.3",
+    "next-seo": "^5.4.0",
+    "next-sitemap": "^2.5.28",
     "prettier": "2.6.2",
     "typescript": "4.7.2"
   },
