--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "framer-motion": "^6.3.6",
     "next": "12.1.6",
     "next-i18next": "^11.0.0",
     "next-themes": "^0.2.0",
