--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "next-seo": "^5.4.0",
     "next-sitemap": "^2.5.28",
     "prettier": "2.6.2",
+    "react-intersection-observer": "^9.2.2",
     "typescript": "4.7.2"
   },
   "lint-staged": {
