--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "framer-motion": "^6.3.6",
+    "i": "^0.3.7",
     "next": "12.1.6",
     "next-i18next": "^11.0.0",
     "next-themes": "^0.2.0",
+    "npm": "^8.13.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "styled-components": "^5.3.5"
