--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "framer-motion": "^6.3.6",
+    "graphql": "^16.5.0",
+    "graphql-request": "^4.3.0",
     "i": "^0.3.7",
     "next": "12.1.6",
     "next-i18next": "^11.0.0",
