--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-themes": "^0.2.0",
     "npm": "^8.13.1",
     "react": "18.1.0",
+    "react-datocms": "^3.0.15",
     "react-dom": "18.1.0",
     "styled-components": "^5.3.5"
   },
