--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@types/tiny-json-http": "^7.3.1",
     "framer-motion": "^6.3.6",
     "graphql": "^16.5.0",
     "graphql-request": "^4.3.0",
@@ -22,7 +23,8 @@
     "react": "18.1.0",
     "react-datocms": "^3.0.15",
     "react-dom": "18.1.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "tiny-json-http": "^7.4.2"
   },
   "devDependencies": {
     "@types/node": "17.0.36",
