--- a/package.json
+++ b/package.json
@@ -12,36 +12,37 @@
   },
   "dependencies": {
     "@types/tiny-json-http": "^7.3.1",
-    "framer-motion": "^6.5.1",
-    "graphql": "^16.5.0",
-    "graphql-request": "^4.3.0",
-    "i": "^0.3.7",
-    "next": "12.1.6",
-    "next-i18next": "^11.0.0",
-    "next-themes": "^0.2.0",
-    "npm": "^8.13.1",
-    "react": "18.1.0",
-    "react-datocms": "^3.0.15",
-    "react-dom": "18.1.0",
-    "styled-components": "^5.3.5",
+    "framer-motion": "^7.3.6",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.0.0",
+    "next": "12.3.1",
+    "next-i18next": "^12.0.1",
+    "next-themes": "^0.2.1",
+    "npm": "^8.19.2",
+    "react": "^18.2.0",
+    "react-datocms": "^3.1.1",
+    "react-dom": "18.2.0",
+    "react-simple-typewriter": "^4.0.2",
     "tiny-json-http": "^7.4.2"
   },
   "devDependencies": {
-    "@types/node": "17.0.36",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.5",
-    "@types/styled-components": "^5.1.25",
-    "babel-plugin-styled-components": "^2.0.7",
-    "eslint": "8.16.0",
-    "eslint-config-next": "12.1.6",
+    "@tailwindcss/typography": "^0.5.7",
+    "@types/node": "18.7.18",
+    "@types/react": "18.0.20",
+    "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.12",
+    "eslint": "8.23.1",
+    "eslint-config-next": "12.3.1",
     "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.1",
-    "lint-staged": "^12.4.3",
-    "next-seo": "^5.4.0",
-    "next-sitemap": "^2.5.28",
-    "prettier": "2.6.2",
-    "react-intersection-observer": "^9.2.2",
-    "typescript": "4.7.2"
+    "lint-staged": "^13.0.3",
+    "next-seo": "^5.5.0",
+    "next-sitemap": "^3.1.22",
+    "postcss": "^8.4.16",
+    "prettier": "2.7.1",
+    "react-intersection-observer": "^9.4.0",
+    "tailwindcss": "^3.1.8",
+    "typescript": "4.8.3"
   },
   "lint-staged": {
     "**/*": [
